--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -5,11 +5,13 @@ verify_ssl = true
 
 [dev-packages]
 pylint = "*"
+autopep8 = "*"
 
 [packages]
 django = "*"
 djangorestframework = "*"
 drfpasswordless = "*"
+django-extensions = "*"
 
 [requires]
 python_version = "3.7"
