--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -12,6 +12,7 @@ django = "*"
 djangorestframework = "*"
 drfpasswordless = "*"
 django-extensions = "*"
+requests = "*"
 
 [requires]
 python_version = "3.7"
