--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^2.8.0",
     "compass-mixins": "^0.12.10",
     "font-awesome": "^4.7.0",
+    "js-cookie": "^2.2.1",
     "namor": "^1.1.3",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
