--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-collapse": "^5.0.0",
     "react-datepicker": "^2.9.6",
     "react-dom": "^16.13.1",
+    "react-image": "^4.0.2",
     "react-quill": "^1.3.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.4.1",
