--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,8 @@
     "react-scripts": "3.4.1",
     "react-select": "^3.0.8",
     "react-sparklines": "^1.7.0",
-    "react-table": "^6.10.3"
+    "react-table": "^6.10.3",
+    "sass-loader": "^9.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
