--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,10 +9,11 @@ ENV PYTHONUNBUFFERED 1
 COPY ./requirements.txt .
 RUN pip install -r requirements.txt
 
-RUN mkdir -p /code
-COPY . /code/
-WORKDIR /code/youngun/
+# RUN mkdir -p /code
+# COPY . /code/
+WORKDIR /code/
 
-RUN ["chmod", "+x", "docker-entrypoint.sh"]
+# RUN ["ls"]
+# RUN ["chmod", "+x", "docker-entrypoint.sh"]
 
-CMD "./docker-entrypoint.sh"
+CMD "ls"
