--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,9 @@ services:
     build: ./backend
     ports:
       - "3600:8000"
+    volumes:
+      - ./backend/youngun:/code
+    command: "sh docker-entrypoint.sh"
   frontend:
     container_name: frontend
     build: ./frontend
