prod settings done

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,8 +9,8 @@ ENV PYTHONUNBUFFERED 1
 COPY ./requirements.txt .
 RUN pip install -r requirements.txt
 
-# RUN mkdir -p /code
-# COPY . /code/
+RUN mkdir -p /code
+COPY . /code/
 WORKDIR /code/
 
 # RUN ["ls"]
