--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/styles": "^4.10.0",
     "@mdi/font": "^4.5.95",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -12,6 +14,7 @@
     "bosket": "^0.2.3",
     "brace": "^0.11.1",
     "chart.js": "^2.8.0",
+    "colcade": "^0.2.0",
     "compass-mixins": "^0.12.10",
     "font-awesome": "^4.7.0",
     "js-cookie": "^2.2.1",
@@ -28,7 +31,6 @@
     "react-dom": "^16.13.1",
     "react-image": "^4.0.2",
     "react-infinite-scroll-component": "^5.0.5",
-    "react-masonry-component": "^6.2.1",
     "react-quill": "^1.3.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.4.1",
