--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-infinite-scroll-component": "^5.0.5",
     "react-masonry-component": "^6.2.1",
     "react-quill": "^1.3.3",
+    "react-responsive-masonry": "^2.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.4.1",
     "react-select": "^3.0.8",
