--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,10 +5,10 @@ WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
 
 COPY package.json ./
-COPY package-lock.json ./
+# COPY package-lock.json ./
 
-RUN npm ci --silent
-RUN npm install react-scripts@3.4.1 -g --silent
+RUN npm i
+RUN npm install react-scripts@3.4.1 sass node-sass -g
 
 COPY . ./
 RUN npm run build
