--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,12 @@
     "brace": "^0.11.1",
     "chart.js": "^2.8.0",
     "compass-mixins": "^0.12.10",
+    "date-fns": "^2.20.1",
+    "eslint-config-react-app": "^6.0.0",
     "font-awesome": "^4.7.0",
     "js-cookie": "^2.2.1",
     "namor": "^1.1.3",
+    "next-images": "^1.7.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-ace": "^7.0.4",
@@ -28,17 +31,21 @@
     "react-collapse": "^5.0.0",
     "react-datepicker": "^2.9.6",
     "react-dom": "^16.13.1",
+    "react-fake-tweet": "^1.0.7",
     "react-image": "^4.0.2",
     "react-infinite-scroll-component": "^5.0.5",
     "react-masonry-component": "^6.2.1",
     "react-quill": "^1.3.3",
     "react-responsive-masonry": "^2.1.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.4.1",
     "react-select": "^3.0.8",
     "react-sparklines": "^1.7.0",
+    "react-static-tweets": "^0.5.3",
     "react-table": "^6.10.3",
-    "react-toastify": "^6.0.8"
+    "react-toastify": "^6.0.8",
+    "react-tweet-embed": "^1.2.2",
+    "sass": "^1.32.8",
+    "static-tweets": "^0.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
