--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,8 @@
     "react-select": "^3.0.8",
     "react-sparklines": "^1.7.0",
     "react-table": "^6.10.3",
-    "react-toastify": "^6.0.8"
+    "react-toastify": "^6.0.8",
+    "react-tweet-embed": "^1.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
