--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^16.13.1",
     "react-image": "^4.0.2",
     "react-infinite-scroll-component": "^5.0.5",
+    "react-js-pagination": "^3.0.3",
     "react-masonry-component": "^6.2.1",
     "react-quill": "^1.3.3",
     "react-responsive-masonry": "^2.1.1",
